log/build_2024-03-21_18-28-45/canbus_interface/stderr.log
  File "/root/ros2-ws-2024/install/canbus_interface/lib/python3.10/site-packages/canbus_interface/can_pub.py", line 3
    from canbus_interface.srv import CanFrameSrimport rclpy                            
                                                      ^^^^^
SyntaxError: invalid syntax

